# cookiecutter-pypackage

./: .editorconfig  .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  CONTRIBUTING.rst  Makefile  README.rst  cookiecutter.json  requirements.in  requirements.txt  setup.cfg  setup.py  tox.ini
docs/: index.rst  prompts.rst  travis_pypi_setup.rst  troubleshooting.rst  tutorial.rst
helpers/: update_requirements.sh
hooks/: post_gen_project.py  pre_gen_project.py
tests/: test_bake_project.py
{{cookiecutter.project_slug}}/: .pre-commit-config.yaml  AUTHORS.rst  CONTRIBUTING.rst  Makefile  README.rst  setup.cfg  setup.py  tox.ini
{{cookiecutter.project_slug}}/helpers/: update_requirements.sh
{{cookiecutter.project_slug}}/requirements/: base.in  dev.in
{{cookiecutter.project_slug}}/tests/: test_{{cookiecutter.project_slug}}.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/: __init__.py  cli.py  settings.py
