[bumpversion]
current_version = 0.1.1
commit = True
tag = True

[metadata]
description-file = README.rst

[bumpversion:file:setup.py]
search = version='{current_version}'
replace = version='{new_version}'


[tool:pytest]
collect_ignore = ['setup.py']
python_files = test_*.py
norecursedirs =
    \{\{cookiecutter.project_slug\}\}
