[bumpversion]
current_version = 0.1.1
commit = True
tag = True

[metadata]
description-file = README.rst

[bumpversion:file:setup.py]
search = version='{current_version}'
replace = version='{new_version}'


[tool:pytest]
collect_ignore = ['setup.py']
python_files = test_*.py
norecursedirs =
    \{\{cookiecutter.project_slug\}\}


[flake8]
max-complexity = 6
max-line-length = 120
enable-extensions = G
format = pylint
isort-show-traceback = True
exclude =
    env/*
    docs/conf.py
    {{cookiecutter.project_slug}}/docs/conf.py
    {{cookiecutter.project_slug}}/tests/test_{{cookiecutter.project_slug}}.py
    {{cookiecutter.project_slug}}/setup.py

# ATTENTION! If you're adding a rule to ignore - update the list below with code description and (optionally) the reason
# why it is disabled

# Just try to avoid non-ascii symbols in code at all (unless it is really needed to use them)
# C101: Coding magic comment not found

# Obsolete, see https://lintlyci.github.io/Flake8Rules/rules/W503.html
# W503: line break before binary operator

# Docstrings are not required (but advisable)
# D100: Missing docstring in public module
# D101: Missing docstring in public class
# D102: Missing docstring in public method
# D103: Missing docstring in public function
# D104: Missing docstring in public package
# D105: Missing docstring in magic method
# D106: Missing docstring in public nested class
# D107: Missing docstring in __init__

# Disabling some low-level bandit warning, that would often cause failures for no reason
# S311: Standard pseudo-random generators are not suitable for security/cryptographic purposes.
# S404: Consider possible security implications associated with subprocess module.
# S603: subprocess call - check for execution of untrusted input

# Don't insist on this rule
# Z306: Found class without a base class

# It is useful for multiline strings. Just avoid such concatenation for single line ones.
# Z326: Found implicit string concatenation

# Sometimes it is more clear to have `else` branch. Just be reasonable.
# Z457: Found redundant returning `else` statement

ignore =
    C101,
    W503,
    D100,D101,D102,D103,D104,D105,D105,D106,D107,
    S311,S404,S603,
    Z306,Z326,Z457

per-file-ignores =
    # It does not make sense to separate tests into several modules
    # Z201: Found module with too many imports
    # Z202: Found too many module members
    tests/test_bake_project.py:Z201,Z202

    # Patterns will be substituted with normal names on project generation
    # Z102: Found incorrect module name pattern
    {{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}.py:Z102

[isort]
skip_glob = env/*
line_length = 119
# 3 - vertical hanging indent (inside parentheses, each import in a separate line)
multi_line_output = 3
indent = 4
default_section = FIRSTPARTY
order_by_type = true
atomic = true
combine_as_imports = true
combine_star = false
include_trailing_comma = true
use_parentheses = true
