[metadata]
name = {{ cookiecutter.project_slug }}
description-file = README.rst

[bumpversion]
current_version = {{ cookiecutter.version }}
commit = True
tag = True

[bumpversion:file:setup.py]
search = version='{current_version}'
replace = version='{new_version}'

[bumpversion:file:{{ cookiecutter.project_slug }}/__init__.py]
search = __version__ = '{current_version}'
replace = __version__ = '{new_version}'

[bdist_wheel]
universal = 1

[flake8]
exclude = docs


[tool:pytest]
collect_ignore = ['setup.py']
python_files = test_*.py


[coverage:run]
omit =
    env/*

[coverage:report]
omit =
    env/*
    tests/*
