[metadata]
name = {{ cookiecutter.project_slug }}
description-file = README.rst

[bumpversion]
current_version = {{ cookiecutter.version }}
commit = True
tag = True

[bumpversion:file:setup.py]
search = version='{current_version}'
replace = version='{new_version}'

[bumpversion:file:{{ cookiecutter.project_slug }}/__init__.py]
search = __version__ = '{current_version}'
replace = __version__ = '{new_version}'

[bdist_wheel]
universal = 1

[flake8]
max-complexity = 6
max-line-length = 120
enable-extensions = G
format = pylint
isort-show-traceback = True
exclude =
    env/*
    docs/conf.py

# ATTENTION! If you're adding a rule to ignore - update the list below with code description and (optionally) the reason
# why it is disabled

# Just try to avoid non-ascii symbols in code at all (unless it is really needed to use them)
# C101: Coding magic comment not found

# Obsolete, see https://lintlyci.github.io/Flake8Rules/rules/W503.html
# W503: line break before binary operator

# Docstrings are not required (but advisable)
# D100: Missing docstring in public module
# D101: Missing docstring in public class
# D102: Missing docstring in public method
# D103: Missing docstring in public function
# D104: Missing docstring in public package
# D105: Missing docstring in magic method
# D106: Missing docstring in public nested class
# D107: Missing docstring in __init__

# Disabling some low-level bandit warning, that would often cause failures for no reason
# S311: Standard pseudo-random generators are not suitable for security/cryptographic purposes.
# S404: Consider possible security implications associated with subprocess module.
# S603: subprocess call - check for execution of untrusted input

# Don't insist on this rule
# Z306: Found class without a base class

# It is useful for multiline strings. Just avoid such concatenation for single line ones.
# Z326: Found implicit string concatenation

# Sometimes it is more clear to have `else` branch. Just be reasonable.
# Z457: Found redundant returning `else` statement

ignore =
    C101,
    W503,
    D100,D101,D102,D103,D104,D105,D105,D106,D107,
    S311,S404,S603,
    Z306,Z326,Z457

per-file-ignores =
    #S101: Use of assert detected. The enclosed code will be removed when compiling to optimised byte code.
    tests/*:S101

[isort]
skip_glob = env/*
line_length = 119
# 3 - vertical hanging indent (inside parentheses, each import in a separate line)
multi_line_output = 3
indent = 4
default_section = FIRSTPARTY
order_by_type = true
atomic = true
combine_as_imports = true
combine_star = false
include_trailing_comma = true
use_parentheses = true


[tool:pytest]
collect_ignore = ['setup.py']
python_files = test_*.py


[coverage:run]
omit =
    env/*

[coverage:report]
omit =
    env/*
    tests/*
